--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 itertools = "0.12.0"
 lazy_static = "1.4.0"
 nom = "7.1.3"
+num-integer = "0.1.45"
 readonly = "0.2.11"
